--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body
     font-size: xx-large;
     font-weight: 700;
     margin-top: 10vh;
+    color:white;
     margin-left: auto;
     margin-right: auto;
     /* animation: fadein 3s ease-in-0ut; */
@@ -46,6 +47,7 @@ body
     font-size: xx-large;
     font-weight: 700;
     margin-top: 10vh;
+    color : white;
     /* animation: fadein 3s ease-in-0ut; */
 }
 button
