--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body
 button
 {
     border-radius: 10px;
-    background: linear-gradient(to top,black,white);
+    background: black;
     padding: 10px;
 }
 /* @keyframes fadein
